--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,5 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/avallecam/usethistest
+URL: https://github.com/avallecam/usethistest, https://avallecam.github.io/usethistest/
 BugReports: https://github.com/avallecam/usethistest/issues
